added calendar and menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="inscription">INSCRIPTION</string>
     <string name="s_inscrire">S\'inscrire</string>
     <string name="confirmer_mdp">Confirmer votre mot de passe</string>
+    <string name="title_activity_calendar">CalendarActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
