--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,20 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- Activity_regiter -->
+    <string name="validate">Valider</string>
+    <string name="profile">PROFIL</string>
+    <string name="Recipes">RECETTES</string>
+    <string name="male">Homme</string>
+    <string name="female">Femme</string>
+    <string name="heigth">Taille (en cm)</string>
+    <string name="weigth">Poids (en kg)</string>
+    <string name="numberMeals">Nombre de repas par jour</string>
+    <string name="PhycsicalActivity">Niveau d\'activité physique</string>
+    <string-array name="physicalActivity">
+        <item>Légère</item>
+        <item>Modérée</item>
+        <item>Importante</item>
+    </string-array>
 </resources>
